third_party/move/tools/move-asm/tests/assembler/non_native_fun_no_body.exp
processed 1 task
task 0 lines 1-4:  publish [module 0x66::test]
Error: error: non-native function must have a body
  ┌─ test:3:5
  │
3 │ fun f(l0: u64): u64
  │     ^


