third_party/move/tools/move-asm/tests/assembler/non_native_fun_no_body.masm
//# publish
module 0x66::test

fun f(l0: u64): u64
